--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,15 +1,23 @@
 <div class="row">
-  <%= form_for @contact do |f| %>
+  <div class="col-md-4 col-md-offset-4">
+    <div class="well">
+    <%= form_for @contact do |f| %>
+       <div class="form-group">
+          <%= f.label :name %>
+          <%= f.email_field :name, class: "form-control" %>
+       </div>
+       <div class="form-group">
+        <%= f.label :email %>
+        <%= f.email_field :email, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :comments %>
+        <%= f.text_area :comments, class: "form-control" %>
+      </div>
 
-    <%= f.label :name %>
-    <%= f.email_field :name %>
+        <%= f.submit 'Submit', class: "btn btn-default" %>
 
-    <%= f.label :email %>
-    <%= f.email_field :email %>
-
-    <%= f.label :comments %>
-    <%= f.text_area :comments %>
-
-
-  <% end %>
+      <% end %>
+    </div>
+  </div>
 </div>
