--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,18 +25,20 @@
     </div>
     
     <div class="collapse navbar-collapse" id="main-nav-collapse">
-      <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "About", about_path %></li>
+       <ul class="nav navbar-nav navbar-right">
+         <li><%= link_to "About", about_path %></li>
         <li><%= link_to "Contact Us", new_contact_path %></li>
-      </ul>
+       </ul>
     </div> <!-- navbar-collapse -->
 
   </div> <!-- container -->
   </nav> 
 
   <div class="container">  
-    <%= yield %>
-  </div>
+    <% flash.each do |key, value| %>
+      <%= content_tag :div, value, class: "alert alert-#{key}" %>
+    <% end %>
+     <%= yield %>
 
 </body>
 </html>
