--- a/app/views/contact_mailer/contact_email.html.erb
+++ b/app/views/contact_mailer/contact_email.html.erb
@@ -4,7 +4,8 @@
         
     </head>
     <body>
-        <p>You have a new comment from Dev Match! It is from <%= "#{ @name }, at #{ @email }" %>.</p>
-        <p><%= #{ @body } %></p>
+        <p> You have a new comment from Dev Match! It is from <%= "#{ @name }, at #{ @email }" %>. </p>
+        <p> <%= "#{@body}" %> </p>  
     </body>
+    
 </html>
