--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,3 +2,20 @@
   <h1>Welcome to Dev Match</h1>
   <h3>A membership site where developers can meet!</h3>
 </div>
+
+<div class="row">
+  <div class="col-md-6">
+    <div class="well">
+      <h2 class="text-center">Basic Membership</h2>
+      <h4 class="text-center">Sign up for free and get basic access to the community</h4>
+      <br>
+      <%= link_to "Sign up with Basic!", new_user_registration_path, class: "btn btn-primary btn-lg btn-block" %>
+    </div>
+  </div>
+  <div class="col-md-6"><div class="well">
+      <h2 class="text-center">Pro Membership</h2>
+      <h4 class="text-center">Sign up for $10/month to get full access to the community and their contact info</h4>
+      <%= link_to "Sign up with Pro!", new_user_registration_path, class: "btn btn-success btn-lg btn-block" %>
+    </div>
+  </div>
+</div>
