Added notice and styles

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -4,6 +4,8 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 
-body {
-    
+.alert {
+    color: #8a6d3b;
+    background-color: #fcf8e3;
+    border-color: #faebcc;
 }
