--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,3 @@
-
-
 <div class="jumbotron text-center">
   <h1>Welcome to Dev Match</h1>
   <h3>A membership site where developers can meet!</h3>
@@ -14,7 +12,8 @@
           <%= link_to "Edit your profile", "#", class: "btn btn-success btn-lg btn-block" %>
           <%= link_to "View your profile", user_path(current_user), class: "btn btn-primary btn-lg btn-block" %>
         <% else %>
-          <%= link_to "Create your profile", new_user_profile_path(current_user) if current_user %>
+          <p class="text-center">Create your profile to become a member of the Dev Match community.</p>
+          <%= link_to "Create your profile", new_user_profile_path(current_user), class: "btn btn-primary btn-lg btn-block" %>
         <% end %>
       </div>
     </div>
