--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
       <div class="well">
         <% if current_user.profile %>
           <h2 class="text-center">Your Profile</h2>
-          <%= link_to "Edit your profile", "#", class: "btn btn-success btn-lg btn-block" %>
+          <%= link_to "Edit your profile", edit_user_profile_path(current_user), class: "btn btn-success btn-lg btn-block" %>
           <%= link_to "View your profile", user_path(current_user), class: "btn btn-primary btn-lg btn-block" %>
         <% else %>
           <p class="text-center">Create your profile to become a member of the Dev Match community.</p>
