--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,21 @@
-<%= image_tag @user.profile.avatar.url %>
-<%= @user %>
-<br/>
-<%= @user.profile.first_name %> <%= @user.profile.last_name %>
-<br/>
-<%= @user.profile.job_title %><br/>
-<% if current_user.plan_id == 2 %>
-    <%= @user.profile.phone_number %><br/>
-    <%= @user.profile.contact_email %><br/>
-<% end %>
-<%= @user.profile.description %><br/>
+<div class='row'>
+    <div class="col-md-3 text-center">
+        <%= image_tag @user.profile.avatar.url %>
+    </div>
+        <div class="col-md-6">
+        <br/>
+        <h1><%= @user.profile.first_name %> <%= @user.profile.last_name %></h1>
+        <h3><span class="job-title-icon text-center"><%= job_title_icon %></span> <%= @user.profile.job_title %></h3>
+        <div class="well profile-description">
+            <h3>About <%= @user.profile.first_name %></h3>
+            <p><%= @user.profile.description %></p>
+        </div>
+        <div class="well pro-features">
+        <% if current_user.plan_id == 2 %>
+            <h3>Get in touch</h3>
+            <%= @user.profile.phone_number %><br/>
+            <%= @user.profile.contact_email %><br/>
+        <% end %>
+       </div>
+    </div>
+</div>
