--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,7 +21,7 @@
       <div class="well">
         <h2 class="text-center">The Community</h2>
         <p class="text-center">Visit the community to meet fellow developers, entrepreneurs, and investors!</p>
-        <%= link_to "Visit the Community", '#', class: "btn btn-primary btn-lg btn-block" %>
+        <%= link_to "Visit the Community", users_path, class: "btn btn-primary btn-lg btn-block" %>
       </div>
     </div>
   <% else %>
