--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,8 @@
+.user-show-avatar {
+ height: 128px;
+ width: 128px;
+}
+
 .job-title-icon {
     width: 30px;
     height: 30 px;
@@ -31,3 +36,8 @@ img {
 -moz-box-shadow: 0px 9px 20px 0px rgba(0,0,0,0.75);
 box-shadow: 0px 9px 20px 0px rgba(0,0,0,0.75);
 }
+
+.well.white-bg {
+    background-color: white;
+}
+
