--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,7 +15,11 @@
                             <%= link_to u do %>
                                 <h1><%= u.profile.first_name %> <%= u.profile.last_name %></h1>
                             <% end %>
-                            <p><%= u.profile.job_title %></p>
+                            <p><%= u.profile.job_title %>
+                            <% if u.plan_id == 2 %>
+                                <span class="label label-danger">PRO</span>
+                            <% end %>
+                            </p>
                         </div>
                     </li>
                 <% end %>
